More java 11 fixes. WCS 1.1 has the same 'fix' as CQL, cannot have linting enabled on generated code, but found no way to separate it out